--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,12 @@
 ---
 layout: layouts/base.njk
-title: Title Strings
+title: Home - Mi estupenda web
 ---
-<h1>This is global data: {{siteData.name}}</h1>
+<h1>Esta es mi página web: {{siteData.name}}</h1>
+<p>
+  Bienvenido a  {{siteData.dominio}}
+</p>
+
+<p>
+  <a href="/portafolio/">ir a portafolio</a>
+</p>
